--- a/eval_dna/do_not_answer/utils/info.yaml
+++ b/eval_dna/do_not_answer/utils/info.yaml
@@ -1,3 +1,4 @@
-OpenAI: YOURKEY
-HuggingFace: YOURKEY
-Anthropic: YOURKEY
+OpenAI: your_openai_api_key_here
+Gemini: your_gemini_api_key_here
+HuggingFace: your_huggingface_token_here
+Anthropic: your_anthropic_api_key_here
