--- a/eval_dna/llm-compe-eval/requirements.txt
+++ b/eval_dna/llm-compe-eval/requirements.txt
@@ -14,7 +14,9 @@
 #tqdm>=4.64.0
 
 # Logging and experiment tracking
-wandb>=0.15.0
+#wandb>=0.15.0
+#└─ wandb >=0.15.0  is not installable because it requires
+#   └─ protobuf >=3.19.0,!=4.21.0,<5  but there are no viable options
 
 scikit-learn>=1.3.0
 
